# HospitalRobot

./: .gitignore  LOGGING_GUIDE.md  Note.txt  PLAN_GUIDE.md  conftest.py
.claude/: settings.local.json
camera_sensor/: package.xml  setup.py
docs/: 01-architecture.md  02-project-flow.md  03-end-to-end-flow.md  10-plan-authoring.md  11-mqtt-messaging.md  12-logging.md  20-device-protocol.md  21-line-tracking-strategy.md  22-huskylens-integration.md  30-code-review.md  CHANGELOG.md  DEVICE_PROTOCOL.md  HUSKYLENS_INTEGRATION.md  LINE_TRACKING_STRATEGY.md  LOGGING_GUIDE.md  MQTT_MESSAGE_GUIDE.md  PLAN_GUIDE.md  PROJECT_FLOW.md  README.md  index.typ  plan_examples.json  theme.typ
huskylens_sensor/: package.xml  setup.cfg  setup.py
install/: local_setup.sh  setup.sh
line_follower/: package.xml  setup.py
line_sensors/: package.xml  setup.cfg  setup.py
line_sensors/device_code/: main.py
line_sensors/line_sensors/: config.json  lineData.json  line_sensor_driver_node.py  line_sensor_reader.py
line_sensors/test/: test_line_sensor_parser.py
log/: latest_build
manual_control/: package.xml  setup.py
mqtt_bridge/: package.xml  setup.py
mqtt_bridge/install/: local_setup.sh  setup.ps1  setup.sh
mqtt_bridge/install/mqtt_bridge/lib/mqtt_bridge/: mqtt_bridge  mqtt_bridge2
mqtt_bridge/install/mqtt_bridge/share/mqtt_bridge/: package.sh  package.xml
mqtt_bridge/log/: latest_build
mqtt_bridge/mqtt_bridge/: MQTTBridgeROS.py  config.json  keyboard_input.py  log_bridge.py  log_throttler.py  mqtt_bridge_node.py  plan_resolver.py  runtime_utils.py
mqtt_bridge/test/: test_camera_face_ids.py  test_handle_inbound_event.py  test_local_pub_prune.py  test_log_throttler.py  test_plan_resolution.py  test_plan_resolver.py
(+125 files in other folders)
