<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mqtt_bridge</name>
  <version>0.0.0</version>
  <description>MQTT bridge between operator inputs and ROS2 robot topics</description>
  <maintainer email="aclab@todo.todo">aclab</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>rcl_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>robot_common</depend>
  <exec_depend>python3-paho-mqtt</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
